<resources>
    <string name="app_name">SportBooking</string>
    <string name="login_title">Logowanie</string>
    <string name="password">Hasło</string>
    <string name="login">Login</string>
    <string name="signup">Rejestracja</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="register_title">Rejestracja</string>
    <string name="name">Nazwa użytkownika</string>
    <string name="hint_name">Podaj nazwę użytkownia</string>
    <string name="email">E-mail</string>
    <string name="hint_mail">Podaj adres e-mail</string>
    <string name="hint_password">Podaj hasło</string>
    <string name="register">Zarejestruj</string>

    <string name="http404">Requested resource not found</string>
    <string name="http500">Something went wrong at server end</string>
    <string name="httpError">Unexpected Error occcured! [Most common Error: Device might not be connected to Internet or remote server is not up and running]</string>
    <string name="jsonError">Error Occured [Server JSON response might be invalid]!</string>

    <string name="drawer_header_text">Menu</string>
    <string name="nav_item_objects">Obiekty</string>
    <string name="nav_item_reservation">Rezerwacje</string>
    <string name="nav_item_notification">Notyfikacje</string>
    <string name="nav_item_watched">Obserwowane</string>
    <string name="nav_sub_menu">Inne</string>
    <string name="nav_item_logout">Wyloguj</string>
    <string name="action_settings">Wyloguj</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="register_successfully">Zarejestrowano pomyślnie!</string>
    <string name="enter_valid_mail">Proszę podać poprawny e-mail</string>
    <string name="fiill_all_fields">Proszę wypełnić wszystkie pola</string>
    <string name="login_successfully">Zalogowano poprawnie!</string>
    <string name="nav_item_about_program">O programie</string>

    <string name="object_item_calendar">Termin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_date">Wybierz datę</string>
    <string name="objectItemAvailable">Dostępny</string>
    <string name="reserveButton">Rezerwuj</string>
    <string name="watchButton">Obserwuj</string>
    <string name="dateFromLabel">Data od:</string>
    <string name="dateToLabel">Data do:</string>
    <string name="reserveObjectInfo">Zarezerwowano pomyślnie</string>
    <string name="watchObjectInfo">Dodano do obserwowanych</string>
    <string name="reserveObjectNotAvailable">Nie można dokonać rezerwacji. Obiekt niedostępny.</string>
    <string name="objectWatched">Obiekt jest już obserwowany.</string>
    <string name="reservationNumber">Numer rezerwacji:</string>
    <string name="delete_reservation">Usuń rezerwacje</string>
    <string name="reservationDeleted">Rezerwacja została usunięta</string>
    <string name="watchedDeleted">Obserwacja została usunięta</string>
    <string name="reservationDeletedError">Nie można usunąć rezerwacji</string>
    <string name="watchedDeletedError">Nie można usunąć obserwacji</string>
    <string name="itemBusy">Zajęty. Możliwość obserwacji.</string>
    <string name="incomingReservation">Nadchodząca rezerwacja</string>
    <string name="watchingReservationAvailable">Termin zwolniony</string>

</resources>
