<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_object"
            android:checked="true"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_item_objects" />
        <item
            android:id="@+id/navigation_item_reservation"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/nav_item_reservation" />
        <item
            android:id="@+id/navigation_item_watched"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_item_watched" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:id="@+id/navigation_item_about_program"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_item_about_program" />
        </menu>
    </item>

</menu>